--- a/package.json
+++ b/package.json
@@ -1,37 +1,40 @@
 {
-  "name": "Renew",
-  "private": true,
-  "version": "0.0.0",
-  "description": "a Sails application",
+  "name": "sails-react-example",
+  "version": "0.3.0",
+  "description": "Sails and React integration example. Also uses Bower for web package management and RequireJS for AMD.",
   "keywords": [],
   "dependencies": {
-    "ejs": "~0.8.4",
-    "grunt": "^0.4.5",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-coffee": "~0.10.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.9.0",
-    "grunt-contrib-jst": "~0.6.0",
-    "grunt-contrib-less": "0.11.1",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-sails-linker": "~0.9.5",
-    "grunt-sync": "~0.0.4",
-    "include-all": "~0.1.3",
-    "rc": "~0.5.0",
-    "sails": "~0.11.2",
-    "sails-disk": "~0.10.0"
+    "bower": "^1.3.3",
+    "ejs": "2.3.4",
+    "grunt": "0.4.5",
+    "grunt-babel": "^6.0.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-coffee": "0.13.0",
+    "grunt-contrib-concat": "0.5.1",
+    "grunt-contrib-copy": "0.5.0",
+    "grunt-contrib-cssmin": "0.9.0",
+    "grunt-contrib-jst": "0.6.0",
+    "grunt-contrib-less": "1.1.0",
+    "grunt-contrib-uglify": "0.7.0",
+    "grunt-contrib-watch": "0.5.3",
+    "grunt-sails-linker": "~0.10.1",
+    "grunt-sync": "0.2.4",
+    "include-all": "~0.1.6",
+    "rc": "1.0.1",
+    "sails": "~0.12.0",
+    "sails-disk": "~0.10.9"
   },
   "scripts": {
-    "debug": "node debug app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "debug": "node debug app.js"
   },
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/jonlov/Renew.git"
+    "url": "https://github.com/mixxen/sails-react-example"
   },
-  "author": "jonlov",
-  "license": ""
+  "author": "Alex Cabello",
+  "license": "MIT"
 }
